Add user data decoding when returning to frontend